# xerces-c

./: meson.build  meson_options.txt
src/: meson.build
src/xercesc/util/: meson.build  version.rc.cmake.in
